--- a/NEWS
+++ b/NEWS
@@ -1,7 +1,7 @@
 GNOME Video Arcade 0.6.0
 ========================
 
-        Released April ??, 2008
+        Released April 19 2008
 
         What's New
         ----------
