--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,13 @@
+GNOME Video Arcade 0.6.1
+========================
+
+        Released May ?? 2008
+
+        What's New
+        ----------
+        * More intuitive search behavior.  Picking an item from the search
+          completion list now does an exact match on that item.
+
 GNOME Video Arcade 0.6.0
 ========================
 
