--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2008-06-16  Matthew Barnes  <mbarnes@redhat.com>
+
+	* NEWS: Update for 0.6.2
+
 2008-05-31  Matthew Barnes  <mbarnes@redhat.com>
 
 	* configure.ac:
