--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,12 @@
+GNOME Video Arcade 0.6.3
+========================
+
+	Released July ??, 2008
+
+	What's New
+	----------
+	* Show parent/clone information in the Technical Properties tab.
+
 GNOME Video Arcade 0.6.2
 ========================
 
